Add Profile Picture

--- a/Index.html
+++ b/Index.html
@@ -33,5 +33,9 @@
         </div>
     </div>
     
+    <div class="photo">
+        <img src="pic.jpg" alt="jim">
+    </div>
+    
 </body>
 </html>
